crates/forge_tool/src/fs/snapshots/forge_tool__fs__fs_list__test__fs_list_empty_directory.snap
---
source: crates/forge_tool/src/fs/fs_list.rs
expression: "TempDir::normalize(&result)"
snapshot_kind: text
---
<file_list path="[TEMP_DIR]">

</file_list>
